# course_work

./: .gitignore  pyproject.toml
src/: operations.py  utils.py
tests/: test_operations.py
